# Raytracer

./: .gitignore  CMakeLists.txt  README.md  build-mac.sh  main.cpp  main.cpp.save-failed  scence_backup.xml  scene.xml
.github/workflows/: build-test.yml
data/scenes/: scence_backup.xml  scene.xml  scene_DOF_example.xml
include/: BoundVolume.h  BoundVolumeHierarchy.h  Camera.h  Color.h  GObject.h  HaltonSampler.h  Light.h  Matrix.h  OctTree.h  Plane.h  RandomSampler.h  Sampler.h  Sphere.h  TreeNode.h  Utility.h  VObject.h  Vector.h  gui.h  imageArray.h  imageArray.h.save-failed
include/GObjects/: GObject.h  Mesh.h  Mesh.h.save-failed  Plane.h  Sphere.h  Triangle.h
modules/: CMakeLists.txt
modules/Deserialize/: CMakeLists.txt  deserialize.cpp  deserialize.h
modules/GObjects/: BoundVolume.cpp  BoundVolume.h  BoundVolumeHierarchy.cpp  BoundVolumeHierarchy.h  CMakeLists.txt  GObject.cpp  GObject.h  Mesh.cpp  Mesh.h  ObjReader.cpp  Plane.cpp  Plane.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h
modules/GObjects/tests/: SphereTests.cpp
modules/Render/: CMakeLists.txt  render.cpp  render.h
modules/RenderTools/: CMakeLists.txt  Camera.cpp  Camera.h  Light.cpp  Light.h  RenderStructs.h  imageArray.cpp  imageArray.h
modules/Samplers/: CMakeLists.txt  HaltonSampler.h  RandomSampler.cpp  RandomSampler.h  Sampler.cpp  Sampler.h
modules/Stats/: CMakeLists.txt  stats.cpp  stats.h
modules/Stats/tests/: StatsTests.cpp
modules/Utility/: CMakeLists.txt  Color.cpp  Color.h  Matrix.cpp  Matrix.h  Utility.cpp  Utility.h  Vector.cpp  Vector.h
modules/Utility/tests/: ColorTests.cpp  MatrixTests.cpp  UtilityTests.cpp  VectorTests.cpp
modules/runner/: Camera.h  Light.cpp  Light.h  gui.cpp  imageArray.h  main.cpp
modules/samplers/: HaltonSampler.h  RandomSampler.h  Sampler.h
runners/: CMakeLists.txt
runners/desktop-render/: CMakeLists.txt  ObjReader.cpp  ObjReader.h  deserialize.cpp  deserialize.h  main.cpp  render.cpp  render.h
scripts/: build-mac.sh  build.sh  setup_wangblows.sh
src/: BoundVolume.cpp  BoundVolumeHierarchy.cpp  Camera.cpp  Color.cpp  GObject.cpp  HaltonSampler.cpp  Light.cpp  Matrix.cpp  OctTree.cpp  Plane.cpp  RandomSampler.cpp  Sphere.cpp  TreeNode.cpp  Utility.cpp  VObject.cpp  Vector.cpp  gui.cpp  imageArray.cpp
src/GObjects/: GObject.cpp  Mesh.cpp  Plane.cpp  Sphere.cpp  Triangle.cpp
